bindings/c/whiteout_m2.h

typedef struct whiteout_M2SkinSection whiteout_M2SkinSection;
typedef struct whiteout_M2Batch whiteout_M2Batch;
typedef struct whiteout_M2ShadowBatch whiteout_M2ShadowBatch;
typedef struct whiteout_M2SkinProfile whiteout_M2SkinProfile;
typedef struct whiteout_M2GlobalFlags whiteout_M2GlobalFlags;
typedef struct whiteout_M2GlobalSequence whiteout_M2GlobalSequence;
typedef struct whiteout_M2Sequence whiteout_M2Sequence;
typedef struct whiteout_M2Vertex whiteout_M2Vertex;
uint8_t whiteout_m2_M2Batch_get_flags(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_flags(whiteout_M2Batch* self, uint8_t value);
int8_t whiteout_m2_M2Batch_get_priorityPlane(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_priorityPlane(whiteout_M2Batch* self, int8_t value);
uint16_t whiteout_m2_M2Batch_get_shaderId(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_shaderId(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_skinSectionIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_skinSectionIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_geosetIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_geosetIndex(whiteout_M2Batch* self, uint16_t value);
int16_t whiteout_m2_M2Batch_get_colorIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_colorIndex(whiteout_M2Batch* self, int16_t value);
uint16_t whiteout_m2_M2Batch_get_materialIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_materialIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_materialLayer(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_materialLayer(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureCount(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureCount(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureCoordComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureCoordComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureWeightComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureWeightComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureTransformComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureTransformComboIndex(whiteout_M2Batch* self, uint16_t value);
/* ── M2ShadowBatch ─────────────────────────────────────────────── */

whiteout_M2ShadowBatch* whiteout_m2_M2ShadowBatch_new(void);
void whiteout_m2_M2ShadowBatch_delete(whiteout_M2ShadowBatch* self);
uint8_t whiteout_m2_M2ShadowBatch_get_flags(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_flags(whiteout_M2ShadowBatch* self, uint8_t value);
uint8_t whiteout_m2_M2ShadowBatch_get_flags2(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_flags2(whiteout_M2ShadowBatch* self, uint8_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_unknown0(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_unknown0(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_submeshId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_submeshId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_textureId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_textureId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_colorId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_colorId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_transparencyId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_transparencyId(whiteout_M2ShadowBatch* self, uint16_t value);
/* ── M2SkinProfile ─────────────────────────────────────────────── */

whiteout_M2SkinProfile* whiteout_m2_M2SkinProfile_new(void);
void whiteout_m2_M2SkinProfile_delete(whiteout_M2SkinProfile* self);
size_t whiteout_m2_M2SkinProfile_get_submeshes_count(const whiteout_M2SkinProfile* self);
whiteout_M2SkinSection* whiteout_m2_M2SkinProfile_get_submeshes_at(whiteout_M2SkinProfile* self, size_t index);
size_t whiteout_m2_M2SkinProfile_get_batches_count(const whiteout_M2SkinProfile* self);
whiteout_M2Batch* whiteout_m2_M2SkinProfile_get_batches_at(whiteout_M2SkinProfile* self, size_t index);
uint32_t whiteout_m2_M2SkinProfile_get_lodVertexBase(const whiteout_M2SkinProfile* self);
void whiteout_m2_M2SkinProfile_set_lodVertexBase(whiteout_M2SkinProfile* self, uint32_t value);
size_t whiteout_m2_M2SkinProfile_get_shadowBatches_count(const whiteout_M2SkinProfile* self);
whiteout_M2ShadowBatch* whiteout_m2_M2SkinProfile_get_shadowBatches_at(whiteout_M2SkinProfile* self, size_t index);
/* ── M2GlobalFlags ─────────────────────────────────────────────── */

whiteout_M2GlobalFlags* whiteout_m2_M2GlobalFlags_new(void);
void whiteout_m2_M2GlobalFlags_delete(whiteout_M2GlobalFlags* self);
int32_t whiteout_m2_M2GlobalFlags_get_value(const whiteout_M2GlobalFlags* self);
void whiteout_m2_M2GlobalFlags_set_value(whiteout_M2GlobalFlags* self, int32_t value);
/* ── M2GlobalSequence ─────────────────────────────────────────────── */

whiteout_M2GlobalSequence* whiteout_m2_M2GlobalSequence_new(void);
void whiteout_m2_M2GlobalSequence_delete(whiteout_M2GlobalSequence* self);
uint32_t whiteout_m2_M2GlobalSequence_get_timestamp(const whiteout_M2GlobalSequence* self);
void whiteout_m2_M2GlobalSequence_set_timestamp(whiteout_M2GlobalSequence* self, uint32_t value);
/* ── M2Sequence ─────────────────────────────────────────────── */

whiteout_M2Sequence* whiteout_m2_M2Sequence_new(void);
void whiteout_m2_M2Sequence_delete(whiteout_M2Sequence* self);
uint16_t whiteout_m2_M2Sequence_get_id(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_id(whiteout_M2Sequence* self, uint16_t value);
uint16_t whiteout_m2_M2Sequence_get_variationIndex(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_variationIndex(whiteout_M2Sequence* self, uint16_t value);
uint32_t whiteout_m2_M2Sequence_get_duration(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_duration(whiteout_M2Sequence* self, uint32_t value);
float whiteout_m2_M2Sequence_get_movespeed(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_movespeed(whiteout_M2Sequence* self, float value);
int32_t whiteout_m2_M2Sequence_get_flags(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_flags(whiteout_M2Sequence* self, int32_t value);
int16_t whiteout_m2_M2Sequence_get_frequency(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_frequency(whiteout_M2Sequence* self, int16_t value);
uint16_t whiteout_m2_M2Sequence_get_padding(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_padding(whiteout_M2Sequence* self, uint16_t value);
uint32_t whiteout_m2_M2Sequence_get_replayMin(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_replayMin(whiteout_M2Sequence* self, uint32_t value);
uint32_t whiteout_m2_M2Sequence_get_replayMax(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_replayMax(whiteout_M2Sequence* self, uint32_t value);
uint16_t whiteout_m2_M2Sequence_get_blendTimeIn(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_blendTimeIn(whiteout_M2Sequence* self, uint16_t value);
uint16_t whiteout_m2_M2Sequence_get_blendTimeOut(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_blendTimeOut(whiteout_M2Sequence* self, uint16_t value);
int16_t whiteout_m2_M2Sequence_get_variationNext(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_variationNext(whiteout_M2Sequence* self, int16_t value);
uint16_t whiteout_m2_M2Sequence_get_aliasNext(const whiteout_M2Sequence* self);
void whiteout_m2_M2Sequence_set_aliasNext(whiteout_M2Sequence* self, uint16_t value);
/* ── M2Vertex ─────────────────────────────────────────────── */

whiteout_M2Vertex* whiteout_m2_M2Vertex_new(void);
void whiteout_m2_M2Vertex_delete(whiteout_M2Vertex* self);