bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2Batch_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_flags(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial sbyte whiteout_m2_M2Batch_get_priorityPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_priorityPlane(IntPtr self, sbyte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_shaderId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_shaderId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_skinSectionIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_skinSectionIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_geosetIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_geosetIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2Batch_get_colorIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_colorIndex(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_materialIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_materialIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_materialLayer(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_materialLayer(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_textureCount(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_textureCount(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_textureComboIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_textureComboIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_textureCoordComboIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_textureCoordComboIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_textureWeightComboIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_textureWeightComboIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Batch_get_textureTransformComboIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Batch_set_textureTransformComboIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2ShadowBatch_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2ShadowBatch_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_flags(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m2_M2ShadowBatch_get_flags2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_flags2(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ShadowBatch_get_unknown0(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_unknown0(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ShadowBatch_get_submeshId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_submeshId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ShadowBatch_get_textureId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_textureId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ShadowBatch_get_colorId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_colorId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2ShadowBatch_get_transparencyId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2ShadowBatch_set_transparencyId(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinProfile_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinProfile_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2SkinProfile_get_submeshes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinProfile_get_submeshes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2SkinProfile_get_batches_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinProfile_get_batches_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2SkinProfile_get_lodVertexBase(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2SkinProfile_set_lodVertexBase(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2SkinProfile_get_shadowBatches_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2SkinProfile_get_shadowBatches_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2GlobalFlags_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2GlobalFlags_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2GlobalFlags_get_value(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2GlobalFlags_set_value(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2GlobalSequence_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2GlobalSequence_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2GlobalSequence_get_timestamp(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2GlobalSequence_set_timestamp(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Sequence_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_id(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_id(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_variationIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_variationIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Sequence_get_duration(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_duration(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2Sequence_get_movespeed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_movespeed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m2_M2Sequence_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2Sequence_get_frequency(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_frequency(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_padding(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_padding(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Sequence_get_replayMin(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_replayMin(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2Sequence_get_replayMax(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_replayMax(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_blendTimeIn(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_blendTimeIn(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_blendTimeOut(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_blendTimeOut(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial short whiteout_m2_M2Sequence_get_variationNext(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_variationNext(IntPtr self, short value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2Sequence_get_aliasNext(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Sequence_set_aliasNext(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Vertex_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Vertex_delete(IntPtr self);
